Bug 584501  - another round of texture fixes - r=vladimir a=blocking2.0